--- a/styles.css
+++ b/styles.css
@@ -78,11 +78,11 @@ body {
   transition: transform 500ms ease-in-out;
 }
 
-.card.visable .card-back {
+.card.visible .card-back {
   transform: rotateY(-180deg);
 }
 
-.card.visable .card-front {
+.card.visible .card-front {
   transform: rotateY(0);
 }
 
